@@ -724,5 +724,11 @@ I*{0}-0] page 170", [4, 2, 2]]]]
 ? genus2red(177*x^6+126*x^5-63*x^4+72*x+84,3)
 [729, Mat([3, 6]), 1593*x^6 + 6750*x^5 + 11817*x^4 + 10952*x^3 + 5672*x^2 + 
 1560*x + 180, [3, [6, [Mod(0, 3)]], ["[I{5}-IV*-0] pages 159-177", [15]]]]
+? genus2red(3*(4*x^6+6*x^5+3*x^4+8*x^3+9*x^2-3),3)
+[59049, Mat([3, 10]), 108*x^6 + 270*x^5 + 279*x^4 + 160*x^3 + 57*x^2 + 12*x 
++ 1, [3, [5, [Mod(0, 3), Mod(0, 3)]], ["[II-IV*-0] pages 159-174", [3]]]]
+? genus2red(x^6+27,3)
+[81, Mat([3, 4]), x^6 + 27, [3, [5, [Mod(0, 3), Mod(0, 3)]], ["[2I*{0}-0] pa
+ges 159, 181", [2, 2]]]]
 ? print("Total time spent: ",gettime);
-Total time spent: 133
+Total time spent: 72
