@@ -704,3 +704,8 @@ genus2red(273*x^6-38933/5*x^5-4483763/4*x^4+371954149/10*x^3+569046245/4*x^2+123
 
 \\ #1826
 genus2red(177*x^6+126*x^5-63*x^4+72*x+84,3)
+
+\\ #2053
+genus2red(3*(4*x^6 + 6*x^5 + 3*x^4 + 8*x^3 + 9*x^2 - 3), 3)
+
+genus2red(x^6+27,3)
