@@ -20,6 +20,8 @@ AP    5- alginit(nf, hasse inv.) sometimes wrong degree or stack overflow
      16- galoischartable: wrong results
      17- factor(N, lim) was using primes <= lim instead of < lim as documented
      18- bnrinit(,m,1) could return generators not coprime to m (when 2 || Nm)
+     19- genus2red(3*(4*x^6+6*x^5+3*x^4+8*x^3+9*x^2-3),3) -> bug in
+         litredp [#2053]
 
   Changed
       1- polcoeff is deprecated and renamed polcoef: it now only applies
